--- a/index.html
+++ b/index.html
@@ -3,25 +3,25 @@
 
 <head>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-GSY6P9S4LK"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-GSY6P9S4LK"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
     gtag('config', 'G-GSY6P9S4LK');
-    </script>
+    </script> -->
     <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    <!-- <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-W4HTBHG5');</script>
+    })(window,document,'script','dataLayer','GTM-W4HTBHG5');</script> -->
     <!-- End Google Tag Manager -->
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jayesh Prasad Anandan Portfolio</title>
+    <title>Bhakti Patrawala Portfolio</title>
     
     <!-- <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script> -->
 
@@ -37,8 +37,8 @@
 
 <body>
     <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W4HTBHG5"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W4HTBHG5" -->
+    <!-- height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript> -->
     <!-- End Google Tag Manager (noscript) -->
     <!-- header design -->
     <header class="header">
@@ -60,7 +60,7 @@
     <section class="home" id="home">
         <div class="home-content">
             <h3>Hello, I am</h3>
-            <h1>Jayesh Prasad Anandan</h1>
+            <h1>Bhakti Patrawala</h1>
             <h2>Crafting algorithms and insights into impactful solutions: where machine learning meets data analytics excellence.</h2>
             <p>Passionate and results-driven Data Scientist with a Master's degree in Data Science and a proven track record of leveraging data-driven insights to drive strategic decision-making and solve complex business challenges. 
                 Skilled in statistical analysis, machine learning, and data visualization, with proficiency in Python, R, and various data science tools and libraries. 
@@ -69,8 +69,8 @@
 
             <div class="social-media">
                 
-                <a href="https://github.com/jayashprasad8"><i class='bx bxl-github'></i></a>
-                <a href="https://www.linkedin.com/in/jayeshprasad28/"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://github.com/bhaktipatrawala"><i class='bx bxl-github'></i></a>
+                <a href="https://www.linkedin.com/in/bhakti-patrawala/"><i class='bx bxl-linkedin'></i></a>
             </div>
 
             <a href="https://github.com/jayashprasad8/Resume/blob/main/Jayesh%20Prasad%20Anandan%20Resume.pdf" class="btn">Download Resume</a>
@@ -182,7 +182,7 @@
         <div class="footer-text">
             <div class="contact-info-container" id="contact"> 
                 <img src="Images/email.svg" alt="Email icon" class="icon contact-icon email-icon" >
-                <p><a href="mailto:jayash.prasad8@gmail.com">jayash.prasad8@gmail.com</a></p>
+                <p><a href="mailto:bhaktipatrawala@gmail.com">bhaktipatrawala@gmail.com</a></p>
               </div>
 
         </div>
