Header logo update

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <!-- End Google Tag Manager (noscript) -->
     <!-- header design -->
     <header class="header">
-        <a href="#" class="logo">JPA</a>
+        <a href="#" class="logo">BP</a>
 
         <nav class="navbar">
             <a href="#home" class="active">Home</a>
