Added Tableau Public URL

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
             <div class="social-media">
                 
                 <a href="https://github.com/bhaktipatrawala"><i class='bx bxl-github'></i></a>
+                <a href="https://public.tableau.com/app/profile/bhakti.patrawala/vizzes"><i class='bx bxl-tableaupublic'></i></a>
                 <a href="https://www.linkedin.com/in/bhakti-patrawala/"><i class='bx bxl-linkedin'></i></a>
             </div>
 
