Resume and Profile Photo

--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
                 <a href="https://www.linkedin.com/in/bhakti-patrawala/"><i class='bx bxl-linkedin'></i></a>
             </div>
 
-            <a href="https://github.com/jayashprasad8/Resume/blob/main/Jayesh%20Prasad%20Anandan%20Resume.pdf" class="btn">Download Resume</a>
+            <a href="https://github.com/bhaktipatrawala/Resume/blob/main/Resume_BhaktiPatrawala.pdf" class="btn">Download Resume</a>
         </div>
 
 
         <div class = 'home.png' id = "img">
-            <img src = 'Images/Professional Photo copy.jpg' alt = "" style="width: 100%;max-width: 100%;">
+            <img src = 'Images/Profile_image_Crop.jpeg' alt = "" style="width: 100%;max-width: 100%;">
         </div>
 
         <div class = "overlay"></div>
