--- a/index.html
+++ b/index.html
@@ -95,14 +95,20 @@
         <div class="services-container">
             <div class="services-box">
                 <i class='bx bxl-python'></i>
-                <h3>Marketing Data Analyst</h3>
-                <h1>Indiana University</h1>
-                <h1>April 2023 - Present</h1>
-                <p> I played a pivotal role in tracking and analyzing marketing campaign metrics across all 10 campuses, leveraging Google Analytics and Google Tag Manager. 
-                    By providing actionable insights and industry trends, I significantly contributed to enhancing student admissions, site quality, and engagement across various schools. </p>
+                <h3>Associate Software Engineer</h3>
+                <h1>Larsen & Toubro Infotech</h1>
+                <h1>August 2019 - May 2022</h1>
+                <p> • Implemented a comprehensive technical support system for an offshore oil rig application, optimizing backend processes
+                    and streamlining database management, resulting in a 75% reduction in downtime and enhanced crew productivity
+                    • Achieved a notable 60% resolution rate by promptly coordinating with application users through various communication
+                    channels, effectively resolving 6 out of 10 reported issues within the first day of complaint receipt
+                    • Successfully addressed backend bugs that were tracking user activities at oil rigs, leading to a significant 93% reduction in
+                    application downtime in 5 months, showcasing dedication to seamless user experiences and operational efficiency
+                    • Elevated team performance through adept supervision and training of 5+ team members, empowering them to excel in
+                    deployment, bug investigation, testing, and automation domains </p>
                 <!--<a href="#" class="btn">Read More </a> -->
             </div>
-            <div class="services-box">
+            <!-- <div class="services-box">
                 <i class='bx bxs-data' ></i>
                 <h3>Data Engineer</h3>
                 <h1>Tata Consultancy Services Limited</h1>
@@ -121,7 +127,7 @@
                     I pioneered a Mobile Application for Object detection of Designs and Patterns in Textile Materials using Tensorflow, 
                     showcasing my ability to leverage cutting-edge technologies to solve real-world challenges.</p>
                <!--<a href="#" class="btn">Read More </a> -->
-            </div>
+            </div> -->
             
     </section>
 
