--- a/index.html
+++ b/index.html
@@ -98,14 +98,9 @@
                 <h3>Associate Software Engineer</h3>
                 <h1>Larsen & Toubro Infotech</h1>
                 <h1>August 2019 - May 2022</h1>
-                <p> • Implemented a comprehensive technical support system for an offshore oil rig application, optimizing backend processes
-                    and streamlining database management, resulting in a 75% reduction in downtime and enhanced crew productivity
-                    • Achieved a notable 60% resolution rate by promptly coordinating with application users through various communication
-                    channels, effectively resolving 6 out of 10 reported issues within the first day of complaint receipt
-                    • Successfully addressed backend bugs that were tracking user activities at oil rigs, leading to a significant 93% reduction in
-                    application downtime in 5 months, showcasing dedication to seamless user experiences and operational efficiency
-                    • Elevated team performance through adept supervision and training of 5+ team members, empowering them to excel in
-                    deployment, bug investigation, testing, and automation domains </p>
+                <p> Implemented comprehensive technical support and streamlined database management for an offshore oil rig, resulting in a 75% downtime reduction. 
+                    Achieved a 60% issue resolution rate within a day and a 93% application downtime reduction in 5 months. 
+                    Empowered team members for enhanced performance and automated testing, reducing post-deployment testing time by 79%.</p>
                 <!--<a href="#" class="btn">Read More </a> -->
             </div>
             <!-- <div class="services-box">
