--- a/index.html
+++ b/index.html
@@ -138,17 +138,17 @@
                     <h1>Psychological Feature Space using Deep Neural Networks</h1>
                     <h3>Python, Vision Transformers, Deep Neural Networks</h3>
                     
-                    <a href="https://github.com/jayashprasad8/Psychological-Feature-Space-using-Deep-Neural-Networks/blob/main/Deep_Learning_Project_Report_With_Github_Link.pdf"><i class='bx bx-link-external'></i></a>
+                    <a href="https://github.com/bhaktipatrawala/Psychological-Feature-Space-using-Deep-Neural-Networks/blob/main/Deep_Learning_Project_Report_With_Github_Link.pdf"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="portfolio-box">
                 <img src="Images/project_image3.png" alt="">
 
                 <div class="portfolio-layer">
-                    <h1>Retail Sales Prediction using Amazon Web Services</h1>
-                    <h3>Python, AWS SageMaker, Scikit-learn, Machine Learning, AWS Lambda, AWS Quicksight</h3>
+                    <h1>Food Blog Application using Amazon Web Services</h1>
+                    <h3>React JS, Node.js, AWS Elastic Beanstalk, AWS RDS- MySQL, AWS API Gateway, AWS Lambda, AWS S3</h3>
                     <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, ipsam est.</p> -->
-                    <a href="https://github.com/jayashprasad8/Retail-Sales-Prediction-using-Amazon-Web-Services/blob/main/Engineering_Cloud_Computing_Project_Report%20Final.pdf"><i class='bx bx-link-external'></i></a>
+                    <a href="https://github.com/bhaktipatrawala/Food_Blog_Application-AWS/blob/main/Food_Blog_Application_Project_Report.pdf"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
@@ -159,7 +159,7 @@
                     <h1>Twitch Social Network Analysis</h1>
                     <h3>Python, Networkx, Graph Neural Networks</h3>
                     <!-- <p></p> -->
-                    <a href="https://github.com/jayashprasad8/Twitch-Social-Network-Analysis/blob/main/HPGA_Report%20Final.pdf"><i class='bx bx-link-external'></i></a>
+                    <a href=https://github.com/bhaktipatrawala/Twitch-Social-Network-Analysis/blob/main/HPGA_Report%20Final.pdf"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
