--- a/index.html
+++ b/index.html
@@ -165,16 +165,28 @@
 
 
             <div class="portfolio-box">
+                <img src="Images/ML_Project_Picture.png" alt="">
+
+                <div class="portfolio-layer">
+                    <h1>Home Credit Default Risk Kaggle Competition Project</h1>
+                    <h3>Python, Machine Learning, Exploratory Data Analysis</h3>
+                    <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, ipsam est.</p>  -->
+                    <a href="https://github.com/jayashprasad8/Polycystic-Ovary-Syndrome-Prediction-using-Classification-Models/blob/main/B565%20DATA%20MINING%20-%20POLYCYSTIC%20OVARY%20SYNDROME%20PREDICTION%20PROJECT%20REPORT.pdf"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+
+
+            <!-- <div class="portfolio-box">
                 <img src="Images/Pcos.png" alt="">
 
                 <div class="portfolio-layer">
                     <h1>Polycystic Ovary Syndrome Prediction using Classification Models</h1>
                     <h3>Python, Classification Models, Scikit-learn</h3>
-                    <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, ipsam est.</p> -->
-                    <a href="https://github.com/jayashprasad8/Polycystic-Ovary-Syndrome-Prediction-using-Classification-Models/blob/main/B565%20DATA%20MINING%20-%20POLYCYSTIC%20OVARY%20SYNDROME%20PREDICTION%20PROJECT%20REPORT.pdf"><i class='bx bx-link-external'></i></a>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, ipsam est.</p> -->
+                    <!-- <a href="https://github.com/jayashprasad8/Polycystic-Ovary-Syndrome-Prediction-using-Classification-Models/blob/main/B565%20DATA%20MINING%20-%20POLYCYSTIC%20OVARY%20SYNDROME%20PREDICTION%20PROJECT%20REPORT.pdf"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
-            
+             -->
             
         </div>
     </section>
