--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                     <h1>Home Credit Default Risk Kaggle Competition Project</h1>
                     <h3>Python, Machine Learning, Exploratory Data Analysis</h3>
                     <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, ipsam est.</p>  -->
-                    <a href="https://github.com/jayashprasad8/Polycystic-Ovary-Syndrome-Prediction-using-Classification-Models/blob/main/B565%20DATA%20MINING%20-%20POLYCYSTIC%20OVARY%20SYNDROME%20PREDICTION%20PROJECT%20REPORT.pdf"><i class='bx bx-link-external'></i></a>
+                    <a href="https://github.com/bhaktipatrawala/Home_Credit_Default_Risk_AML_Project/blob/main/Report_Home_Credit_Default_Risk.pdf"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
