--- a/index.html
+++ b/index.html
@@ -61,11 +61,8 @@
         <div class="home-content">
             <h3>Hello, I am</h3>
             <h1>Bhakti Patrawala</h1>
-            <h2>Crafting algorithms and insights into impactful solutions: where machine learning meets data analytics excellence.</h2>
-            <p>Passionate and results-driven Data Scientist with a Master's degree in Data Science and a proven track record of leveraging data-driven insights to drive strategic decision-making and solve complex business challenges. 
-                Skilled in statistical analysis, machine learning, and data visualization, with proficiency in Python, R, and various data science tools and libraries. 
-                Experienced in collaborating cross-functionally with product, engineering, and business teams to translate data into actionable insights. 
-                Dedicated to continuous learning and innovation in the field of data science. Excited about opportunities to contribute to impactful projects and drive meaningful outcomes.</p>
+            <h2>Crafting Data Marvels: Where Insight Meets Innovation</h2>
+            <p>Armed with a Master's degree in Data Science from Indiana University, I fervently navigate the realm of analytics, leveraging statistical prowess, machine learning acumen, and the art of data visualization. My journey commenced as an Associate Software Engineer at Larsen and Toubro Infotech, where I orchestrated transformative technical solutions, optimizing processes and bolstering productivity for offshore oil rig operations. Championing projects like constructing a Psychological Feature Space using Deep Neural Networks and dissecting Twitch Social Network dynamics with precision, I've showcased my prowess in blending advanced analytics with real-world problem-solving. With a robust technical arsenal spanning diverse programming languages, databases, and frameworks, including proficiency in Tableau for captivating data visualizations, I am primed to embark on endeavors that demand innovation, meticulous analysis, and impactful outcomes.</p>
 
             <div class="social-media">
                 
