--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     <h1>Analysis of Nursing Home Quality in the U.S.</h1>
                     <h3>Tableau,Data Analysis, Tableau Prep</h3>
                     
-                    <a href="https://public.tableau.com/app/profile/bhakti.patrawala/viz/Project_Tableau_Data_Story/Story1'></i></a>
+                    <a href="https://public.tableau.com/app/profile/bhakti.patrawala/viz/Project_Tableau_Data_Story/Story1"></i></a>
                 </div>
             </div>
             <div class="portfolio-box">
