--- a/index.html
+++ b/index.html
@@ -195,19 +195,20 @@
     <!-- portfolio section design -->
     <section class="portfolio" id="projects">
         <h2 class="heading">Projects</h2>
+        <div class="portfolio-container"></div>
 
-        <div class="portfolio-box">
-            <img src="Images/Movies_corr_image.png" alt="">
+            <div class="portfolio-box">
+                <img src="Images/Movies_corr_image.png" alt="">
 
-            <div class="portfolio-layer">
-                <h1>Movies Dataset Cleaning and Analysis</h1>
-                <h3>Python, Seaborn, Matplotlib, Numpy, Pandas</h3>
-                <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, ipsam est.</p> -->
-                <a href="https://github.com/bhaktipatrawala/Movie-Performance-Python-Data-cleaning-Analysis/blob/main/Movie_Analysis.ipynb"><i class='bx bx-link-external'></i></a>
+                <div class="portfolio-layer">
+                    <h1>Movies Dataset Cleaning and Analysis</h1>
+                    <h3>Python, Seaborn, Matplotlib, Numpy, Pandas</h3>
+                    <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, ipsam est.</p> -->
+                    <a href="https://github.com/bhaktipatrawala/Movie-Performance-Python-Data-cleaning-Analysis/blob/main/Movie_Analysis.ipynb"><i class='bx bx-link-external'></i></a>
+                </div>
             </div>
-        </div>
 
-        <div class="portfolio-container">
+        
             <div class="portfolio-box">
                 <img src="Images/project_image1.png" alt="">
 
