--- a/index.html
+++ b/index.html
@@ -198,6 +198,17 @@
 
         <div class="portfolio-container">
             <div class="portfolio-box">
+                <img src="Images/Movies_corr_image.png" alt="">
+
+                <div class="portfolio-layer">
+                    <h1>IMDb Movie Rating Analysis</h1>
+                    <h3>Python, Seaborn, Numpy, Pandas, Matplotlib</h3>
+                    
+                    <a href="https://github.com/bhaktipatrawala/Movie-Performance-Python-Data-cleaning-Analysis/blob/main/Movie_Analysis.ipynb'></i></a>
+                </div>
+            </div>
+
+            <div class="portfolio-box">
                 <img src="Images/project_image1.png" alt="">
 
                 <div class="portfolio-layer">
