--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                     <h1>IMDb Movie Rating Analysis</h1>
                     <h3>Python, Seaborn, Numpy, Pandas, Matplotlib</h3>
                     
-                    <a href="https://github.com/bhaktipatrawala/Movie-Performance-Python-Data-cleaning-Analysis/blob/main/Movie_Analysis.ipynb'></i></a>
+                    <a href="https://github.com/bhaktipatrawala/Movie-Performance-Python-Data-cleaning-Analysis/blob/main/Movie_Analysis.ipynb"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
