--- a/index.html
+++ b/index.html
@@ -198,12 +198,12 @@
 
         <div class="portfolio-container">
             <div class="portfolio-box">
-                <img src="Images/Movies_corr_image.png" alt="">
+                <img src="Images/IMDB_Python.jpg" alt="">
 
                 <div class="portfolio-layer">
                     <h1>IMDb Movie Rating Analysis</h1>
                     <h3>Python, Seaborn, Numpy, Pandas, Matplotlib</h3>
-                    
+
                     <a href="https://github.com/bhaktipatrawala/Movie-Performance-Python-Data-cleaning-Analysis/blob/main/Movie_Analysis.ipynb"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
