--- a/index.html
+++ b/index.html
@@ -132,6 +132,16 @@
                 </div>
             </div>
             <div class="portfolio-box">
+                <img src="Images/Power_BI_Dashboard.jpg" alt="">
+
+                <div class="portfolio-layer">
+                    <h1>Credit Card Insights Dashboard: Analyzing Revenue and Customer Demographics</h1>
+                    <h3>PowerBI, PostgreSQL, Microsoft Excel</h3>
+                    <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, ipsam est.</p> -->
+                    <a href="https://github.com/bhaktipatrawala/PowerBI-Credit-Card-Insights"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+            <div class="portfolio-box">
                 <img src="Images/Dashboard_image.png" alt="">
 
                 <div class="portfolio-layer">
