Added Tableau Certification

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 
         <div class = 'home.png' id = "img">
             <img src = 'Images/Profile_image_Crop.jpeg' alt = "" style="width: 100%;max-width: 100%;">
+            <img src = 'Images/tableau-desktop-specialist-small.png' alt = "" style="width: 100%;max-width: 100%;">
         </div>
 
         <div class = "overlay"></div>
@@ -93,28 +94,24 @@
                     Empowered team members for enhanced performance and automated testing, reducing post-deployment testing time by 79%.</p>
                 <!--<a href="#" class="btn">Read More </a> -->
             </div>
-            <!-- <div class="services-box">
-                <i class='bx bxs-data' ></i>
-                <h3>Data Engineer</h3>
-                <h1>Tata Consultancy Services Limited</h1>
-                <h1>November 2020 - July 2022</h1>
-                <p>I played a pivotal role in building an AWS-based ETL pipeline orchestrated with PySpark and Apache Airflow. 
-                    By implementing CI/CD for efficient project management, I enabled seamless dashboard creation and data trend communication, 
-                    significantly exceeding expectations. </p>
-                </p>
             </div>
-            <div class="services-box">
-                <i class='bx bx-code-alt' ></i>
-                <h3>Machine Learning Project Intern</h3>
-                <h1>Tata Consultancy Services</h1>
-                <h1>December 2019 - April 2020</h1>
-                <p> I spearheaded innovative projects that surpassed expectations and delivered exceptional results. 
-                    I pioneered a Mobile Application for Object detection of Designs and Patterns in Textile Materials using Tensorflow, 
-                    showcasing my ability to leverage cutting-edge technologies to solve real-world challenges.</p>
-               <!--<a href="#" class="btn">Read More </a> -->
-            </div> -->
-            
     </section>
+
+    <section class="portfolio" id="projects">
+        <h2 class="heading">Certifications</h2>
+
+        <div class="portfolio-container">
+            <div class="portfolio-box">
+                <img src="Images/tableau-desktop-specialist.png" alt="Tableau Desktop Specialist">
+                <div class="portfolio-layer">
+                    <h1>Tableau Desktop Specialist Certification</h1>
+                    <h3>Tableau Desktop, Tableau Server, Data Analysis, Data Visualization, Data Storytelling, Data Presentation</h3>
+                    <a href="https://www.credly.com/badges/5ab2f2a6-c67f-4518-9a1a-1003a0363e65/public_url"></i></a>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <!-- portfolio section design -->
     <section class="portfolio" id="projects">
