--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
         <div class = 'home.png' id = "img">
             <img src = 'Images/Profile_image_Crop.jpeg' alt = "" style="width: 100%;max-width: 100%;">
-            <img src = 'Images/tableau-desktop-specialist-small.png' alt = "" style="width: 100%;max-width: 100%;">
+            <img src = 'Images/tableau-desktop-specialist-small.png' alt = "" style="width: 25%;max-width: 50%;">
         </div>
 
         <div class = "overlay"></div>
@@ -153,7 +153,7 @@
                 <img src="Images/Box_office_Analysis.png" alt="">
 
                 <div class="portfolio-layer">
-                    <h1>Alslysis of Movie Performance on Box Office</h1>
+                    <h1>Analysis of Movie Performance on Box Office</h1>
                     <h3>Tableau, Microsoft Excel, Data Storytelling</h3>
                     <!-- <p></p> -->
                     <a href="https://public.tableau.com/app/profile/bhakti.patrawala/viz/BoxOfficeDailyTrendsAnlysis/Dashboard1"><i class='bx bx-link-external'></i></a>
