Tableau Badge and Certification

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
         <div class = 'home.png' id = "img">
             <img src = 'Images/Profile_image_Crop.jpeg' alt = "" style="width: 100%;max-width: 100%;">
-            <img src = 'Images/tableau-desktop-specialist-small.png' alt = "" style="width: 25%;max-width: 50%;">
+            <img src = 'Images/tableau-desktop-specialist-small.png' alt = "" style="width: 25%;max-width: 50%;align-self: center;">
         </div>
 
         <div class = "overlay"></div>
@@ -102,7 +102,7 @@
 
         <div class="portfolio-container">
             <div class="portfolio-box">
-                <img src="Images/tableau-desktop-specialist.png" alt="Tableau Desktop Specialist">
+                <img src="Images/tableau-desktop-specialist-small.png" alt="Tableau Desktop Specialist">
                 <div class="portfolio-layer">
                     <h1>Tableau Desktop Specialist Certification</h1>
                     <h3>Tableau Desktop, Tableau Server, Data Analysis, Data Visualization, Data Storytelling, Data Presentation</h3>
