Updated External Link

--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
 
         <div class="portfolio-container">
             <div class="portfolio-box">
-                <img src="Images/tableau-desktop-specialist-small.png" alt="Tableau Desktop Specialist">
+                <img src="Images/tableau-desktop-specialist-small.png" alt="Tableau Desktop Specialist" style="width: 100%;max-width: 100%;">
                 <div class="portfolio-layer">
                     <h1>Tableau Desktop Specialist Certification</h1>
                     <h3>Tableau Desktop, Tableau Server, Data Analysis, Data Visualization, Data Storytelling, Data Presentation</h3>
-                    <a href="https://www.credly.com/badges/5ab2f2a6-c67f-4518-9a1a-1003a0363e65/public_url"></i></a>
+                    <a href="https://www.credly.com/badges/5ab2f2a6-c67f-4518-9a1a-1003a0363e65/public_url"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
         </div>
@@ -125,7 +125,7 @@
                     <h1>Analysis of Nursing Home Quality in the U.S.</h1>
                     <h3>Tableau,Data Analysis, Tableau Prep</h3>
                     
-                    <a href="https://public.tableau.com/app/profile/bhakti.patrawala/viz/Project_Tableau_Data_Story/Story1"></i></a>
+                    <a href="https://public.tableau.com/app/profile/bhakti.patrawala/viz/Project_Tableau_Data_Story/Story1"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="portfolio-box">
