Updated Certification ClassName

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <h2 class="heading">Certifications</h2>
 
         <div class="portfolio-container">
-            <div class="portfolio-box">
+            <div class="certification-box">
                 <img src="Images/tableau-desktop-specialist-small.png" alt="Tableau Desktop Specialist" style="width: 100%;max-width: 100%;">
                 <div class="portfolio-layer">
                     <h1>Tableau Desktop Specialist Certification</h1>
