--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
     <section class="portfolio" id="projects">
         <h2 class="heading">Certifications</h2>
 
-        <div class="portfolio-container">
+        <div class="certification-container">
             <div class="certification-box">
-                <img src="Images/tableau-desktop-specialist-small.png" alt="Tableau Desktop Specialist" style="width: 80%;max-width: 80%;">
+                <img src="Images/tableau-desktop-specialist-small.png" alt="Tableau Desktop Specialist" style="width: 75%;max-width: 100%;">
                 <div class="portfolio-layer">
                     <h1>Tableau Desktop Specialist Certification</h1>
                     <h3>Tableau Desktop, Tableau Server, Data Analysis, Data Visualization, Data Storytelling, Data Presentation</h3>
