--- a/index.html
+++ b/index.html
@@ -67,15 +67,15 @@
             <a href="https://github.com/bhaktipatrawala/Resume/blob/main/Bhakti_Patrawala_Resume_.pdf" class="btn">Download Resume</a>
         </div>
         
-        <div class="home.png" id="img">
+        <!-- <div class="home.png" id="img">
             <img src="Images/Profile_image_Crop.jpeg" alt="" class="profile-image">
             <img src="Images/tableau-desktop-specialist-small.png" alt="" class="centered-badge">
-        </div>
-
-        <!-- <div class = 'home.png' id = "img">
-            <img src = 'Images/Profile_image_Crop.jpeg' alt = "" style="width: 100%;max-width: 100%;">
-            <img src = 'Images/tableau-desktop-specialist-small.png' alt = "" style="width: 25%;max-width: 50%;align-self: center;">
         </div> -->
+
+        <div class = 'home.png' id = "img">
+            <img src = 'Images/Profile_image_Crop.jpeg' alt = "" style="width: 100%;max-width: 100%;">
+            <!-- <img src = 'Images/tableau-desktop-specialist-small.png' alt = "" style="width: 25%;max-width: 50%;align-self: center;"> -->
+        </div>
 
         <div class = "overlay"></div>
 
