--- a/index.html
+++ b/index.html
@@ -154,6 +154,17 @@
             </div>
 
             <div class="portfolio-box">
+                <img src="Images/HR_Dashboard_Powerbi.png" alt="">
+
+                <div class="portfolio-layer">
+                    <h1>HR Attrition Analysis Dashboard</h1>
+                    <h3>PowerBI, PowerQuery, Microsoft Excel</h3>
+                    <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, ipsam est.</p> -->
+                    <a href="https://github.com/bhaktipatrawala/Power-BI-HR-Attrition-Analysis/blob/main/Dashboard_HR_Analytics.pdf"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+
+            <div class="portfolio-box">
                 <img src="Images/Box_office_Analysis.png" alt="">
 
                 <div class="portfolio-layer">
