--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                     <h1>Twitch Social Network Analysis</h1>
                     <h3>Python, Networkx, Graph Neural Networks</h3>
                     <!-- <p></p> -->
-                    <a href=https://github.com/bhaktipatrawala/Twitch-Social-Network-Analysis/blob/main/HPGA_Report%20Final.pdf"><i class='bx bx-link-external'></i></a>
+                    <a href="https://github.com/bhaktipatrawala/Twitch-Social-Network-Analysis/blob/main/HPGA_Report%20Final.pdf"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
