--- a/index.html
+++ b/index.html
@@ -114,6 +114,18 @@
                 </div>
             </div>
         </div>
+
+        <div class="certification-container">
+            <div class="certification-box">
+                <img src="alteryx-designer-core-certification.png" alt="Alteryx Designer Core Certificate" style="width: 100%;max-width: 100%;">
+                <div class="portfolio-layer">
+                    <h1>Alteryx Designer Core Certification</h1>
+                    <h3>Data Analysis, Alteryx, Data Analytics, Extract-Transform-Load (ETL), ETL Automation, Data Transformation, Data Manipulation, Data Processing</h3>
+                    <a href="https://www.credly.com/badges/0711bfc8-0b82-439a-8bd4-69eeb3cd298e/public_url"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+        </div>
+    </section>
     </section>
 
 
