--- a/index.html
+++ b/index.html
@@ -105,8 +105,9 @@
         <h2 class="heading">Certifications</h2>
 
         <div class="certification-container">
+
             <div class="certification-box">
-                <img src="Images/tableau-desktop-specialist.png" alt="Tableau Desktop Specialist" style="width: 100%;max-width: 100%;">
+                <img src="Images/tableau-desktop-specialist.png" alt="Tableau Desktop Specialist">
                 <div class="portfolio-layer">
                     <h1>Tableau Desktop Specialist Certification</h1>
                     <h3>Tableau Desktop, Tableau Server, Data Analysis, Data Visualization, Data Storytelling, Data Presentation</h3>
@@ -114,13 +115,15 @@
                 </div>
             </div>
             <div class="certification-box">
-                <img src="Images/alteryx-designer-core-certification.png" alt="Alteryx Designer Core Certificate" style="width: 100%;max-width: 100%;">
+                <img src="Images/alteryx-designer-core-certification.png" alt="Alteryx Designer Core Certificate">
                 <div class="portfolio-layer">
                     <h1>Alteryx Designer Core Certification</h1>
                     <h3>Data Analysis, Alteryx, Data Analytics, Extract-Transform-Load (ETL), ETL Automation, Data Transformation, Data Manipulation, Data Processing</h3>
                     <a href="https://www.credly.com/badges/0711bfc8-0b82-439a-8bd4-69eeb3cd298e/public_url"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
+
+
         </div>
     </section>
     </section>
