--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <nav class="navbar">
             <a href="#home" class="active">Home</a>
             <a href="#work_ex">Work Experience</a>
+            <a href="#certificates">Certifications</a>
             <a href="#projects">Projects</a>
             <a href="#contact">Contact</a>
         </nav>
@@ -101,7 +102,7 @@
             </div>
     </section>
 
-    <section class="portfolio" id="projects">
+    <section class="portfolio" id="certificates">
         <h2 class="heading">Certifications</h2>
 
         <div class="certification-container">
