Added HCN Experience

--- a/index.html
+++ b/index.html
@@ -91,12 +91,23 @@
         <div class="services-container">
             <div class="services-box">
                 <i class='bx bxl-python'></i>
+                <h3>Senior Consultant</h3>
+                <h1>Hoosier Community Network</h1>
+                <h1>July 2024 - Present</h1>
+                <p> Engaged with business owners to onboard clients, driving revenue growth and contributing to a high success rate. 
+                    Automated data processes and engineered solutions, reducing manual workloads by 48% and improving business efficiency by 27%. 
+                    Created data visualizations that enabled faster, data-driven decision-making while leveraging strong communication and technical skills.</p>
+                <!--<a href="#" class="btn">Read More </a> -->
+            </div>
+
+            <div class="services-box">
+                <i class='bx bxl-python'></i>
                 <h3>Associate Software Engineer</h3>
                 <h1>Larsen & Toubro Infotech</h1>
                 <h1>August 2019 - May 2022</h1>
-                <p> Implemented comprehensive technical support and streamlined database management for an offshore oil rig, resulting in a 75% downtime reduction. 
-                    Achieved a 60% issue resolution rate within a day and a 93% application downtime reduction in 5 months. 
-                    Empowered team members for enhanced performance and automated testing, reducing post-deployment testing time by 79%.</p>
+                <p> Led initiatives to streamline testing and deployment processes, reducing post-deployment testing time by 87.5% through automation and enhancing operational efficiency by 43% using AGILE methodologies. 
+                    Collaborated across teams to resolve critical application bugs, improving stability by 80% and preventing SLA breaches. 
+                    Managed incident resolution, achieving a 93% reduction in application downtime, and guided a team in application testing and automation, ensuring consistent high-quality deployments. </p>
                 <!--<a href="#" class="btn">Read More </a> -->
             </div>
             </div>
